separating js code from html and fixed a but where the diff wouldn't work when an inner object was null

--- a/index.html
+++ b/index.html
@@ -41,75 +41,6 @@
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
-        <script type="text/javascript">
-        (function($) {
-            function diff(base_data,new_data) {
-                var result = {};
-                for (i in base_data) {
-                    if (!(i in new_data)) {
-                        if ($.type(base_data[i]) == 'object') {
-                            result[i] = base_data[i];    
-                        } else {
-                            result[i] = "<em style='color:red'>[Removed] " + base_data[i]+"</em>";
-                        }
-                    } else {
-                        for (j in new_data) {
-                            if (!(j in base_data)) {
-                                if ($.type(base_data[i]) == 'object') {
-                                    result[j] = new_data[j];
-                                } else {
-                                    result[j] = "<em style='color:green'>[Added] " + new_data[j]+"</em>";    
-                                }
-                            } else {
-                                if (base_data[i] != new_data[i]) {
-                                    if ($.type(base_data[i]) == 'object') { 
-                                        result[i] = diff(base_data[i],new_data[i]);
-                                    } else {
-                                        result[i] = "<em style='color:blue'>[Changed] " + base_data[i] + " => " + new_data[i]+"</em>";
-                                    }
-                                } else {
-                                    if ($.type(base_data[i]) == 'object') {
-                                        result[i] = diff(base_data[i]);    
-                                    } else {
-                                        result[i] = base_data[i];
-                                    }          
-                                }
-                            }
-                        }
-                    }
-                }
-                return result;
-            }
-
-            function formatJSON(data,tab_size = 4) {
-                var jsonString = "{\n";
-                var spaces = "";
-                for(x=0;x<tab_size;x++) {
-                    spaces += " ";
-                }
-                for (i in data) {
-                    console.log($.type(data[i]));
-                    if ($.type(data[i]) == 'object') {
-                       jsonString += spaces + i + ":" + formatJSON(data[i],tab_size * 2) + ",\n"; 
-                    } else {
-                        jsonString += spaces + i + ":" + data[i] + ",\n"; 
-                    }
-                }
-                jsonString += "}";
-                return jsonString;
-            }
-
-            $("form").submit(function(e){
-                e.preventDefault();
-                var base_data = $.parseJSON($("#base-json").val());
-                var new_data  = $.parseJSON($("#new-json").val());
-
-                var res = diff(base_data,new_data);
-                $("#result").html(formatJSON(res));
-                //console.log(res);
-            });
-            
-        })(jQuery);
-        </script>
+        <script type="text/javascript" src="js/script.js"></script>
     </body>
 </html>
