Mudado botão pra não fazer post do formulário

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <label for="new-json">New JSON</label>
                     <textarea class="form-control" rows="3" name="new_json" id="new-json"></textarea>
                 </div>
-                <button class="btn btn-default" type="submit">Compare</button>
+                <button class="btn btn-default" type="button" id="button">Compare</button>
             </form>
             <div >
                 <pre class="json" id="result"></pre>
